[package]
name = "ttytee"
version = "1.0.0"
edition = "2021"
authors = ["Guillaume Binet (Skyways)", "Guillaume Binet <gbin@skyways.com>"]

[dependencies]
# By default it used libudev to enumerate ports and it complicates the cross-compilation (and we don't need it).
serialport = { version = "*", default-features = false}
# compiles out debug log statements from the released version.
log = { version = "*", features = ["max_level_debug", "release_max_level_warn"] }
# redirect panics to the log.
log-panics = { version = "*", features = ["with-backtrace"]}
# the output side if the log is simplelog.
simplelog = { version = "*", features = ["paris"] }
# clap is a popular command line parsing crate.
clap = { version="*", features = ["derive"]}

[dev-dependencies]
ctor = "*"

# This is a very prod profile to build for tight platforms if needed. Use release for now.
# It can reduce ~x10 the size of the executable.
[profile.stripped]
inherits = "release"
strip = true
debug = false
opt-level = "z"
debug-assertions = false
lto = "fat"
panic = "abort"
